in card-list remove width 80%, add margin left and right 5%. change justify content from space around to center

--- a/src/Styles/about.scss
+++ b/src/Styles/about.scss
@@ -22,9 +22,10 @@
 
     .Card-list {
       display: flex;
-      justify-content: space-around;
-      width: 80%;
+      justify-content: center;
       flex-direction: column;
+      margin-left: 5%;
+      margin-right: 5%;
 
       .MuiPaper-root {
         background-color: rgba(63, 59, 59, 0.283) !important;
