--- a/src/Styles/education.scss
+++ b/src/Styles/education.scss
@@ -22,5 +22,10 @@
       position: absolute;
       left: 50px;
     }
+
+    .education_description {
+      text-align: left;
+      margin: 2%;
+    }
   }
 }
