--- a/src/Styles/education.scss
+++ b/src/Styles/education.scss
@@ -1,31 +1,24 @@
 .Card-list {
-  // img {
-  //   object-fit: contain;
-  // }
-  .education_card {
 
-    border-radius: 25px;
-    margin: 30px;
-    border: 1px solid gold;
+  .education_header {
     position: relative;
-    max-width: 1000px;
 
-      img {
-        object-fit: contain;
-        height: auto;
-        width: 100%;
-        max-width: 100%;
-      }
     .education_img_container {
-      height: 5em;
-      width: 7em;
+      height: 6em;
+      width: 8em;
       position: absolute;
       left: 50px;
     }
 
-    .education_description {
-      text-align: left;
-      margin: 2%;
+    img {
+      object-fit: contain;
+      height: auto;
+      width: 100%;
+      max-width: 100%;
     }
+  }
+  .education_description {
+    text-align: left;
+    margin: 2%;
   }
 }
