--- a/src/Styles/about.scss
+++ b/src/Styles/about.scss
@@ -45,10 +45,15 @@
     }
   }
 
-  .education_description {
-    text-align: left;
-    margin: 2%;
+  .education_card {
+    margin: 20px 0px 20px 0px;
+
+    .education_description {
+      text-align: left;
+      margin: 2%;
+    }
   }
+
 }
 
 .MuiCardContent-root {
