--- a/src/Styles/about.scss
+++ b/src/Styles/about.scss
@@ -40,6 +40,10 @@
           p {
             color: gold !important;
           }
+
+          .MuiSvgIcon-root {
+            color: gold;
+          }
         }
       }
     }
@@ -48,9 +52,19 @@
   .education_card {
     margin: 20px 0px 20px 0px;
 
+    
     .education_description {
       text-align: left;
       margin: 2%;
+    }
+    
+    .description_toggle {
+      display: flex;
+      justify-content: center;
+      
+      .MuiSvgIcon-root {
+        color: white;
+      }
     }
   }
 
