--- a/src/Styles/about.scss
+++ b/src/Styles/about.scss
@@ -1,9 +1,19 @@
 #About-container {
   padding-bottom: 200px;
+  
+  h4 {
+    font-size: 35px;
+    margin: 10px 0px 30px 0px;
+  }
+  
   .About-cards {
     display: flex;
     flex-direction: column;
     align-items: center;
+
+    .intro_container {
+      text-align: left;
+    }
 
     #About-img {
       border-radius: 25px;
