--- a/src/Styles/about.scss
+++ b/src/Styles/about.scss
@@ -1,10 +1,16 @@
 #About-container {
   padding-bottom: 200px;
   
-  h4 {
-    font-size: 35px;
-    margin: 10px 0px 30px 0px;
+  .intro_header {
+    display: flex;
+    padding: 0px 30px 0px 30px;
+    
+    h4 {
+      font-size: 35px;
+      margin: 10px 0px 30px 0px;
+    }
   }
+
   
   .About-cards {
     display: flex;
@@ -17,13 +23,12 @@
 
     #About-img {
       border-radius: 25px;
-      margin: 30px;
+      margin: 0px 30px 0px 30px;
       border: 1px solid gold;
       margin-bottom: 100px;
     }
 
     #about-description {
-      margin-top: 50px;
       background-color: rgba(63, 59, 59, 0.283) !important;
       color: white !important;
       border: 1px solid gold;
