--- a/src/Styles/slider.scss
+++ b/src/Styles/slider.scss
@@ -1,38 +1,14 @@
 .slider {
-  position: relative;
   height: 50vh;
   display: flex;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
 
   .image {
-    // position: absolute;
-    width: 200px;
+    width: 225px;
     height: 200px;
     border-radius: 10px;
-    // object-fit: contain;
-  }
-
-  .right_arrow {
-    position: absolute;
-    top: 50%;
-    right: 32px;
-    font-size: 3rem;
-    color: #000;
-    z-index: 10;
-    cursor: pointer;
-    user-select: none;
-  }
-
-  .left_arrow {
-    position: absolute;
-    top: 50%;
-    left: 32px;
-    font-size: 3rem;
-    color: #000;
-    z-index: 10;
-    cursor: pointer;
-    user-select: none;
   }
 
   .slide {
