--- a/src/Styles/about.scss
+++ b/src/Styles/about.scss
@@ -4,6 +4,7 @@
   .intro_header {
     display: flex;
     padding: 0px 30px 0px 30px;
+    margin-bottom: 200px;
     
     h4 {
       font-size: 35px;
@@ -19,13 +20,16 @@
 
     .intro_container {
       text-align: left;
+
+      a {
+        color: gold;
+      }
     }
 
     #About-img {
       border-radius: 25px;
       margin: 0px 30px 0px 30px;
       border: 1px solid gold;
-      margin-bottom: 100px;
     }
 
     #about-description {
@@ -38,7 +42,8 @@
     .Card-list {
       display: flex;
       justify-content: center;
-      flex-direction: column;
+      // flex-direction: column;
+      flex-wrap: wrap;
       margin-left: 5%;
       margin-right: 5%;
 
@@ -65,7 +70,7 @@
   }
 
   .education_card {
-    margin: 20px 0px 20px 0px;
+    margin: 20px 10px 20px 10px;
 
     
     .education_description {
