target job-description-list change margin to 0 and 4%. change list style to disc. in experience-container remove flex-direction and align items. add flex wrap and justify content

--- a/src/Styles/experience.scss
+++ b/src/Styles/experience.scss
@@ -1,7 +1,7 @@
 .experience-container {
   display: flex;
-  flex-direction: column;
-  align-items: center;
+  flex-wrap: wrap;
+  justify-content: center;
   margin-top: 20px;
   padding-bottom: 80px;
 
@@ -39,9 +39,9 @@
   }
 
   .job-description-list {
-    margin: 20px;
+    margin: 0 4%;
     li {
-      list-style: square;
+      list-style: disc;
       font-size: 17px;
       padding-bottom: 10px;
       text-align: left;
