--- a/src/Styles/experience.scss
+++ b/src/Styles/experience.scss
@@ -10,16 +10,15 @@
     color: white !important;
     border: 1px solid gold;
     border-radius: 25px;
-    width: 70%;
-    margin: 15px;
+    margin: 30px 10px 30px 10px;
 
     &:hover {
       background-color: rgba(101, 98, 98, 0.906) !important;
     }
 
-    .MuiCardMedia-root {
-      height: 140px;
-    }
+    // .MuiCardMedia-root {
+    //   height: 110px;
+    // }
   }
 
   .MuiTypography-subtitle1 {
@@ -54,12 +53,12 @@
   }
 }
 
-@media only screen and (min-width: 830px) {
-  .experience-container {
-    .MuiPaper-root {
-      .MuiCardMedia-root {
-        height: 218px;
-      }
-    }
-  }
-}
+// @media only screen and (min-width: 830px) {
+//   .experience-container {
+//     .MuiPaper-root {
+//       .MuiCardMedia-root {
+//         height: 218px;
+//       }
+//     }
+//   }
+// }
