--- a/src/Styles/project.scss
+++ b/src/Styles/project.scss
@@ -22,6 +22,23 @@
       display: flex;
       flex-direction: column;
       align-items: center;
+      background-color: rgba(63, 59, 59, 0.283) !important;
+      color: white;
+      border: 1px solid gold;
+      border-radius: 25px;
+
+      &:hover {
+        background-color: rgba(101, 98, 98, 0.906) !important;
+        
+        p {
+          color: gold !important;
+        }
+      }
+
+      p {
+        text-align: left;
+        padding-left: 15px;
+      }
 
       .MuiButton-root {
         border: 1px solid gold;
@@ -39,18 +56,6 @@
           border-color: white;
           background-color: gold !important;
         }
-      }
-    }
-
-    .MuiPaper-root {
-      background-color: rgba(63, 59, 59, 0.283) !important;
-      color: white !important;
-      border: 1px solid gold;
-      border-radius: 25px;
-
-      p {
-        text-align: left;
-        padding-left: 15px;
       }
     }
   }
