target details_toggle add display flex and justify content

--- a/src/Styles/experience.scss
+++ b/src/Styles/experience.scss
@@ -28,6 +28,11 @@
       display: inherit;
       justify-content: space-between;
     }
+
+    .details_toggle {
+      display: flex;
+      justify-content: center;
+    }
   }
 
   .job-description-list {
