--- a/src/Styles/experience.scss
+++ b/src/Styles/experience.scss
@@ -32,6 +32,11 @@
     .details_toggle {
       display: flex;
       justify-content: center;
+      margin-top: -3%;
+
+      .MuiSvgIcon-root {
+        color: gold;
+      }
     }
   }
 
