remove target for MuiCardContent

--- a/src/Styles/about.scss
+++ b/src/Styles/about.scss
@@ -90,26 +90,26 @@
 
 }
 
-.MuiCardContent-root {
-  p {
-    color: white;
+// .MuiCardContent-root {
+//   p {
+//     color: white;
 
-    &:hover {
-      color: gold;
-    }
-  }
-  ul {
-    padding-left: 0px;
+//     &:hover {
+//       color: gold;
+//     }
+//   }
+//   ul {
+//     padding-left: 0px;
 
-    .school {
-      font-weight: bold;
-      font-size: 17px;
-    }
+//     .school {
+//       font-weight: bold;
+//       font-size: 17px;
+//     }
 
-    li {
-      list-style: none;
-      padding-bottom: 7px;
-      font-size: 12px;
-    }
-  }
-}
+//     li {
+//       list-style: none;
+//       padding-bottom: 7px;
+//       font-size: 12px;
+//     }
+//   }
+// }
