--- a/src/Styles/experience.scss
+++ b/src/Styles/experience.scss
@@ -14,6 +14,11 @@
 
     &:hover {
       background-color: rgba(101, 98, 98, 0.906) !important;
+      color: gold !important;
+      
+      .MuiSvgIcon-root {
+        color: white !important;
+      }
     }
 
   }
