target h2 nested within MuiPaper-root add styling for background, color, font-size, margin top and bottom. remove h2 hover styling for color

--- a/src/Styles/experience.scss
+++ b/src/Styles/experience.scss
@@ -16,7 +16,7 @@
       background-color: rgba(101, 98, 98, 0.906) !important;
       color: gold !important;
 
-      .position_header, h3, h2 {
+      .position_header, h3 {
         color: orange;
       }
       
@@ -25,6 +25,13 @@
       }
     }
 
+    h2 {
+      background: gold;
+      color: black;
+      font-size: 25px;
+      margin-top: 0px;
+      margin-bottom: 10px;
+    }
   }
 
   .work-info {
