--- a/src/Styles/about.scss
+++ b/src/Styles/about.scss
@@ -4,19 +4,37 @@
   flex-direction: column;
   align-items: center;
 
-  .intro_container {
-    text-align: left;
-
-    a {
-      color: gold;
+  :hover {
+    color: gold;
+  
+    a, h4 {
+      color: white;
     }
   }
 
-  .MuiPaper-root :hover {
-    color: gold;
+  .intro_header {
+    display: flex;
+    padding: 0px 30px 0px 30px;
+    margin-bottom: 200px;
+    
+    h4 {
+      font-size: 35px;
+      margin: 10px 0px 30px 0px;
+    }
 
-    a, h4 {
+    #about-description {
+      background-color: rgba(63, 59, 59, 0.283);
       color: white;
+      border: 1px solid gold;
+      border-radius: 25px;
+
+      .intro_container {
+        text-align: left;
+    
+        a {
+          color: gold;
+        }
+      }
     }
   }
 
@@ -26,12 +44,6 @@
     border: 1px solid gold;
   }
 
-  #about-description {
-    background-color: rgba(63, 59, 59, 0.283) !important;
-    color: white !important;
-    border: 1px solid gold;
-    border-radius: 25px;
-  }
 
   .Card-list {
     display: flex;
@@ -58,17 +70,6 @@
           color: gold;
         }
       }
-    }
-  }
-  
-  .intro_header {
-    display: flex;
-    padding: 0px 30px 0px 30px;
-    margin-bottom: 200px;
-    
-    h4 {
-      font-size: 35px;
-      margin: 10px 0px 30px 0px;
     }
   }
 
