move hover state logic from about-container into about description. remove hover state target inside intro_container

--- a/src/Styles/about.scss
+++ b/src/Styles/about.scss
@@ -3,14 +3,6 @@
   flex-direction: column;
   align-items: center;
 
-  :hover {
-    color: gold;
-  
-    a, h4 {
-      color: white;
-    }
-  }
-
   .intro_header {
     display: flex;
     padding: 0px 30px 0px 30px;
@@ -32,6 +24,14 @@
       color: white;
       border: 1px solid gold;
       border-radius: 25px;
+
+      :hover {
+        color: gold;
+      
+        a, h4 {
+          color: white !important;
+        }
+      }
 
       .intro_container {
         text-align: left;
