--- a/src/Styles/skills.scss
+++ b/src/Styles/skills.scss
@@ -17,15 +17,14 @@
     }
 
     .skill-info-list {
-      width: 50%;
-      margin: auto;
-      display: block;
+      display: flex;
+      flex-wrap: wrap;
+      margin-left: 5%;
       
       li {
         font-size: 17px;
         text-align: left;
         width: 50%;
-        margin: auto;
         list-style-image: url("../images/circle-check-solid.svg");
 
         span {
