--- a/src/Styles/skills.scss
+++ b/src/Styles/skills.scss
@@ -10,6 +10,7 @@
     color: white;
     border: 1px solid gold;
     border-radius: 25px;
+    margin: 20px 10px 20px 10px;
 
     &:hover {
       background-color: rgba(101, 98, 98, 0.906);
