target icon, set height and width to 7vw, color gold

--- a/src/Styles/toTop.scss
+++ b/src/Styles/toTop.scss
@@ -4,4 +4,10 @@
   width: 50px;
   right: 50px;
   bottom: 50px;
+
+  .MuiSvgIcon-root {
+    width: 7vw;
+    height: 7vw;
+    color: gold;
+  }
 }
