--- a/src/Styles/project.scss
+++ b/src/Styles/project.scss
@@ -60,3 +60,31 @@
     }
   }
 }
+
+.project_side_view {
+  display: flex;
+  margin: 1% 3%;
+  
+  .project_img {
+    width: 60%;
+
+    img {
+      max-height: 90%;
+      max-width: 90%;
+    }
+  }
+
+  .project_info {
+    width: 40%;
+    text-align: left;
+
+    h5 {
+      background: gold;
+      color: black;
+      font-size: 25px;
+      margin-top: 0px;
+      margin-bottom: 10px;
+    }
+  }
+
+}
