--- a/src/Styles/project.scss
+++ b/src/Styles/project.scss
@@ -64,6 +64,7 @@
 .project_side_view {
   display: flex;
   margin: 1% 3%;
+  align-items: center;
   
   .project_img {
     width: 60%;
@@ -77,6 +78,9 @@
   .project_info {
     width: 40%;
     text-align: left;
+    display: flex;
+    flex-direction: column;
+    margin-top: 5%;
 
     h5 {
       background: gold;
@@ -84,6 +88,13 @@
       font-size: 25px;
       margin-top: 0px;
       margin-bottom: 10px;
+    }
+
+    .MuiButton-root {
+      max-width: 22%;
+      align-self: center;
+      border: 1px solid gold;
+      color: gold;
     }
   }
 
