--- a/src/Styles/project.scss
+++ b/src/Styles/project.scss
@@ -63,12 +63,13 @@
 
 .project_side_view {
   display: flex;
+  // flex-wrap: wrap;
   margin: 1% 3% 1% 5%;
   align-items: center;
   min-height: 450px;
   
   .project_img {
-    width: 60%;
+    width: 56vw;
 
     img {
       max-height: 90%;
@@ -77,7 +78,7 @@
   }
 
   .project_info {
-    width: 40%;
+    width: 36vw;
     text-align: left;
     display: flex;
     flex-direction: column;
