--- a/src/Styles/index.css
+++ b/src/Styles/index.css
@@ -6,7 +6,7 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   color: white;
-  background: url("./images/gradient-black.jpg") no-repeat center center fixed;
+  background: url("../images/gradient-black.jpg") no-repeat center center fixed;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
