target class nav arrow and set color. add sizing to arrow icons. then target arrow ids and set position absolute. set position relative to experience-carousel

--- a/src/Styles/ExpCarousel.scss
+++ b/src/Styles/ExpCarousel.scss
@@ -4,6 +4,29 @@
   justify-content: center;
   margin-top: 20px;
   padding-bottom: 80px;
+  position: relative;
+
+  #next_click {
+    position: absolute;
+    top: 25%;
+    right: 22%;
+   
+  }
+
+  #prev_click {
+    position: absolute;
+    top: 25%;
+    left: 22%;
+  }
+
+  .nav_arrow {
+    color: gold;
+
+    .MuiSvgIcon-root {
+      width: 10vh;
+      height: 10vh;
+    }
+  }
 
   .slide_active {
     .MuiPaper-root {
