target skills-list remove flex direction. add flex wrap and add justify content center

--- a/src/Styles/skills.scss
+++ b/src/Styles/skills.scss
@@ -1,6 +1,7 @@
 #skills-list {
   display: flex;
-  flex-direction: column;
+  flex-wrap: wrap;
+  justify-content: center;
   align-items: center;
   margin-top: 20px;
   padding-bottom: 80px;
