add a.contact-icon target info from nav-bar style sheet and

--- a/src/Styles/top_nav.scss
+++ b/src/Styles/top_nav.scss
@@ -55,4 +55,11 @@
       content: "GITHUB";
     }
   }
+  a.contact-icon {
+    padding-top: 20%;
+    
+    &:after {
+      content: "CONTACT";
+    }
+  }
 }
