target new a.home-icon and add content to after

--- a/src/Styles/nav-bar.scss
+++ b/src/Styles/nav-bar.scss
@@ -54,6 +54,12 @@
         -webkit-transition: all 0.3s ease-out;
       }
     }
+
+    a.home-icon {
+      &:after {
+        content: "HOME";
+      }
+    }
     
     a.about-icon {
       &:after {
