change home_img target to be img. set border radius, object-fit and width & height. add display flex and justify content to home_container

--- a/src/Styles/home.scss
+++ b/src/Styles/home.scss
@@ -1,8 +1,11 @@
 .home_container {
-  
+  display: flex;
+  justify-content: space-around;
 
-  .home_img {
+  img {
     border-radius: 50%;
-    overflow: hidden;
+    object-fit: cover;
+    height: 50vh;
+    width: 50vh;
   }
 }
