change width and height for img to be 30vw instead of vh. add align items and padding to come_container

--- a/src/Styles/home.scss
+++ b/src/Styles/home.scss
@@ -1,11 +1,13 @@
 .home_container {
   display: flex;
   justify-content: space-around;
+  align-items: center;
+  padding: 20vh 7%;
 
   img {
     border-radius: 50%;
     object-fit: cover;
-    height: 50vh;
-    width: 50vh;
+    height: 30vw;
+    width: 30vw;
   }
 }
