set top_nav width to 100%, remove gap, add justify content and padding bottom. target top_nav_links add display and gap

--- a/src/Styles/top_nav.scss
+++ b/src/Styles/top_nav.scss
@@ -1,11 +1,17 @@
 .top_nav {
-  position: absolute;
   top: 3vh;
   display: flex;
   right: 3vw;
-  width: 25%;
-  gap: 4vw;
+  width: 100%;
+  // gap: 5vw;
   z-index: 3;
+  justify-content: space-around;
+  padding-bottom: 30px;
+
+  .top_nav_links {
+    display: flex;
+    gap: 5vw;
+  }
 
   a {
     font-size: 22px;
