in home_container change padding from 20vh to 15 vh. Target nested h1, assign color gold. In img give border styling

--- a/src/Styles/home.scss
+++ b/src/Styles/home.scss
@@ -2,12 +2,17 @@
   display: flex;
   justify-content: space-around;
   align-items: center;
-  padding: 20vh 7%;
+  padding: 15vh 7%;
+
+  h1 {
+    color: gold;
+  }
 
   img {
     border-radius: 50%;
     object-fit: cover;
     height: 30vw;
     width: 30vw;
+    border: 3px solid gold;
   }
 }
