--- a/src/Styles/home.scss
+++ b/src/Styles/home.scss
@@ -13,6 +13,12 @@
     object-fit: cover;
     height: 30vw;
     width: 30vw;
-    border: 3px solid gold;
+    box-shadow: 0px 0px 9px 4px gold;
+    animation: glow 1.5s linear infinite alternate;
+  }
+  @keyframes glow{
+    to {
+      box-shadow: 0px 0px 20px 10px gold;
+    }
   }
 }
