--- a/src/Styles/ExpCarousel.scss
+++ b/src/Styles/ExpCarousel.scss
@@ -15,6 +15,17 @@
       width: 10vh;
       height: 10vh;
     }
+
+    .MuiButton-root {
+      border: 1px solid gold;
+      color: gold;
+
+      &:hover {
+        color: black;
+        border-color: white;
+        background-color: gold !important;
+      }
+    }
   }
 
 
