--- a/src/Styles/project.scss
+++ b/src/Styles/project.scss
@@ -3,12 +3,13 @@
   flex-wrap: wrap;
   justify-content: center;
   margin-top: 20px;
-  margin: 1% 3% 1% 6%;
+  margin: 1% 3% 1% 8%;
 
   .project_side_view {
     display: flex;
     align-items: center;
     min-height: 450px;
+    width: 100%;
     
     .project_img {
       width: 56vw;
