in experience_grid set display flex, flex-wrap, height and padding. nested experience_grid_card set flex 1 1 40%, margin 2%, nested nth child flex

--- a/src/Styles/ExpGrid.scss
+++ b/src/Styles/ExpGrid.scss
@@ -1,9 +1,24 @@
-.experience-carousel {
+.experience_grid {
   display: flex;
-  justify-content: center;
-  position: relative;
-  flex-direction: column;
-  align-items: center;
+  flex-wrap: wrap;
+  height: 90vh;
+  padding: 0 10%;
+ 
+
+  .experience_grid_card {
+    flex: 1 1 40%;
+    margin: 2%;
+
+    :nth-child(odd) {
+      flex: 0 0 50px;
+    }
+
+    img {
+      height: 300px;
+      width: 300px;
+      object-fit: cover;
+    }
+  }
 
   .exp_nav {
     display: flex;
