--- a/src/Styles/ExpGrid.scss
+++ b/src/Styles/ExpGrid.scss
@@ -3,6 +3,7 @@
   flex-wrap: wrap;
   height: 80vh;
   padding: 0 10%;
+  justify-content: center;
  
 
   .experience_grid_card {
@@ -29,7 +30,7 @@
     color: white !important;
     border: 1px solid gold;
     border-radius: 25px;
-    margin: 30px 10px 30px 10px;
+    width: 90%;
     position: relative;
 
     &:hover {
