add height 100% to muiPaper-root. target job-description-list change font-size in li to 2.3vh and change padding bottom to 1vh

--- a/src/Styles/ExpGrid.scss
+++ b/src/Styles/ExpGrid.scss
@@ -32,6 +32,7 @@
     border-radius: 25px;
     width: 90%;
     position: relative;
+    height: 100%;
 
     &:hover {
       background-color: rgba(101, 98, 98, 0.906) !important;
@@ -88,8 +89,8 @@
 
     li {
       list-style: disc;
-      font-size: 17px;
-      padding-bottom: 10px;
+      font-size: 2.3vh;
+      padding-bottom: 1vh;
       text-align: left;
 
       span {
