target muiCardContent-root h4 set margin to 0

--- a/src/Styles/ExpGrid.scss
+++ b/src/Styles/ExpGrid.scss
@@ -61,6 +61,12 @@
       margin-top: 0px;
       margin-bottom: 10px;
     }
+
+    .MuiCardContent-root {
+      h4 {
+        margin: 0;
+      }
+    }
   }
 
   .work-info {
