--- a/src/Styles/skills.scss
+++ b/src/Styles/skills.scss
@@ -3,8 +3,9 @@
   flex-wrap: wrap;
   justify-content: center;
   align-items: center;
-  margin-top: 20px;
-  padding-bottom: 80px;
+  // margin-top: 20px;
+  // padding-bottom: 80px;
+  padding: 0 5%;
 
   .MuiPaper-root {
     background-color: rgba(63, 59, 59, 0.283);
@@ -21,7 +22,7 @@
     .skill-info-list {
       display: flex;
       flex-wrap: wrap;
-      margin-left: 5%;
+      // margin-left: 5%;
       
       li {
         font-size: 17px;
