remove commented out styling. target skill-info-list add width, margin-left and padding-left

--- a/src/Styles/skills.scss
+++ b/src/Styles/skills.scss
@@ -22,6 +22,9 @@
     .skill-info-list {
       display: flex;
       flex-wrap: wrap;
+      width: 100%;
+      margin-left: 15%;
+      padding-left: 0px;
       // margin-left: 5%;
       
       li {
