--- a/src/Styles/project.scss
+++ b/src/Styles/project.scss
@@ -3,13 +3,22 @@
   flex-wrap: wrap;
   justify-content: center;
   margin-top: 20px;
-  margin: 1% 3% 1% 8%;
+  margin: 1% 3% 1% 7%;
 
-  .project_side_view {
+  .project_side_view_1 {
+    background-color: rgba(108, 122, 137, 0.1);
+  }
+
+  .project_side_view_2 {
+    background-color: rgba(238, 238, 238, 0.1);
+  }
+
+  .project_side_view_2, .project_side_view_1 {
     display: flex;
     align-items: center;
     min-height: 450px;
     width: 100%;
+    padding: 0 1.5%;
     
     .project_img {
       width: 56vw;
