--- a/src/Styles/home.scss
+++ b/src/Styles/home.scss
@@ -16,9 +16,27 @@
     box-shadow: 0px 0px 9px 4px gold;
     animation: glow 1.5s linear infinite alternate;
   }
-  @keyframes glow{
+  @keyframes glow {
     to {
       box-shadow: 0px 0px 20px 10px gold;
     }
+  }
+}
+
+@media (max-width: 1025px) {
+  .home_container {
+    padding: 15vh 9%;
+  }
+}
+
+@media (max-width: 769px) {
+  .home_container {
+    padding: 15vh 3% 15vh 15%;
+  }
+}
+
+@media (max-width: 480px) {
+  .home_container {
+    padding: 20vh 3% 15vh 15%;
   }
 }
