add media queries form home.scss, add min width settings for padding

--- a/src/Styles/App.scss
+++ b/src/Styles/App.scss
@@ -1,8 +1,8 @@
-@import url('https://fonts.googleapis.com/css2?family=Rubik');
+@import url("https://fonts.googleapis.com/css2?family=Rubik");
 
 .App {
   text-align: center;
-  font-family: 'Rubik', sans-serif;
+  font-family: "Rubik", sans-serif;
   position: relative;
 
   h1 {
@@ -43,5 +43,29 @@
   }
   to {
     transform: rotate(360deg);
+  }
+}
+
+@media (min-width: 1026px) {
+  .home_container {
+    padding: 15vh 7%;
+  }
+}
+
+@media (max-width: 1025px) {
+  .home_container {
+    padding: 15vh 9%;
+  }
+}
+
+@media (max-width: 769px) {
+  .home_container {
+    padding: 18vh 3% 15vh 15%;
+  }
+}
+
+@media (max-width: 480px) {
+  .home_container {
+    padding: 20vh 3% 15vh 15%;
   }
 }
