--- a/src/Styles/home.scss
+++ b/src/Styles/home.scss
@@ -1,6 +1,7 @@
 .home_container {
   display: flex;
-  justify-content: space-around;
+  justify-content: space-between;
+  width: 80%;
   align-items: center;
 
   h1 {
