--- a/src/Styles/App.scss
+++ b/src/Styles/App.scss
@@ -67,6 +67,13 @@
 @media (max-width: 769px) {
   .home_container {
     padding: 18vh 3% 15vh 15%;
+    flex-direction: column;
+    gap: 50px;
+
+    img {
+      height: 50vw;
+      width: 50vw;
+    }
 
     h1 {
       font-size: 35px;
@@ -82,9 +89,14 @@
 
 @media (max-width: 480px) {
   .home_container {
-    padding: 24vh 3% 15vh 15%;
+    padding: 20vh 3% 15vh 15%;
     flex-direction: column;
     gap: 50px;
+
+    img {
+      height: 50vw;
+      width: 50vw;
+    }
 
     h1 {
       font-size: 30px;
