--- a/src/Styles/App.scss
+++ b/src/Styles/App.scss
@@ -5,6 +5,12 @@
   font-family: "Rubik", sans-serif;
   position: relative;
 
+  .App__current_container {
+    display: flex;
+    justify-content: center;
+    min-height: 80vh;
+  }
+
   h1 {
     font-size: 40px;
     margin: 0px;
@@ -49,12 +55,14 @@
 @media (min-width: 1026px) {
   .home_container {
     padding: 15vh 7%;
+    gap: 25px;
   }
 }
 
 @media (max-width: 1025px) {
   .home_container {
     padding: 15vh 9%;
+    gap: 25px;
   }
 
   .top_nav {
