change image dimensions from being hardcoded px to be vw

--- a/src/Styles/slider.scss
+++ b/src/Styles/slider.scss
@@ -6,8 +6,8 @@
   align-items: center;
 
   .image {
-    width: 275px;
-    height: 275px;
+    width: 30vw;
+    height: 30vw;
     border-radius: 10px;
   }
 
