for maxwidth 769 target h3 in topnav to set font size and padding to be responsive

--- a/src/Styles/App.scss
+++ b/src/Styles/App.scss
@@ -89,6 +89,12 @@
   }
 
   .top_nav {
+    h3 {
+      font-size: 3vw;
+      word-wrap: normal;
+      padding-top: 1vw;
+    }
+
     a:after {
       font-size: 9px !important;
     }
