--- a/src/Styles/about.scss
+++ b/src/Styles/about.scss
@@ -2,11 +2,12 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  padding: 0% 3% 0% 12%;
 
   .intro_header {
     display: flex;
     flex-direction: column;
-    gap: 2%;
+    gap: 5%;
 
     .intro_left {
       display: flex;
@@ -28,7 +29,7 @@
     }
 
     h4 {
-      font-size: 35px;
+      font-size: 5vw;
       margin: 10px 0px 30px 0px;
     }
 
@@ -49,7 +50,7 @@
 
       .intro_container {
         text-align: left;
-        font-size: 14.5px;
+        font-size: 2.2vw;
 
         a {
           color: gold;
@@ -59,81 +60,73 @@
   }
 }
 
-@media (max-width: 1025px) {
-  #About {
-    padding: 7% 3% 0% 12%;
+// @media (max-width: 1025px) {
+//   #About {
+//     padding: 7% 3% 0% 12%;
 
-    .intro_header {
-      #about-description {
-        .MuiCardContent-root {
-          .intro_container {
-            font-size: 12px;
-          }
-        }
-      }
+//     .intro_header {
+//       #about-description {
+//         .MuiCardContent-root {
+//           .intro_container {
+//             font-size: 12px;
+//           }
+//         }
+//       }
 
-      .intro_left {
-        img {
-          height: 20vw;
-          width: 20vw;
-        }
+//       .intro_left {
+//         img {
+//           height: 20vw;
+//           width: 20vw;
+//         }
 
-        .slider .image {
-          height: 24vw;
-          width: 24vw;
-        }
-      }
-    }
-  }
-}
+//         .slider .image {
+//           height: 24vw;
+//           width: 24vw;
+//         }
+//       }
+//     }
+//   }
+// }
 
+//////**  MEDIA AT BELOW 769 **//////
 @media (max-width: 769px) {
   #About {
-    padding: 7% 3% 0% 12%;
+    padding: 5vw 3% 0% 12%;
 
-    .intro_header {
-      .intro_left {
-        .slider .image {
-          height: 28vw;
-          width: 28vw;
-        }
-      }
-    }
+    // .slider .image {
+    //   height: 28vw;
+    //   width: 28vw;
+    // }
 
-    h4 {
-      font-size: 25px !important;
-    }
+    // h4 {
+    //   font-size: 25px !important;
+    // }
   }
 }
 
+//////**  MEDIA AT BELOW 480 **//////
 @media (max-width: 480px) {
   #About {
-    padding: 7% 3% 0% 14%;
+    padding: 15vw 3% 0% 18vw;
 
-    .intro_header {
-      #about-description {
-        .MuiCardContent-root {
-          .intro_container {
-            font-size: 12px;
-          }
-        }
+    .intro_left {
+      img {
+        height: 20vw;
+        width: 20vw;
       }
 
-      .intro_left {
-        img {
-          height: 20vw;
-          width: 20vw;
-        }
-
-        .slider .image {
-          height: 24vw;
-          width: 24vw;
-        }
+      .slider .image {
+        height: 24vw;
+        width: 24vw;
       }
     }
 
-    h4 {
-      font-size: 20px !important;
+    #about-description {
+      .MuiCardContent-root {
+        .intro_container {
+          font-size: 2.8vw;
+        }
+      }
     }
   }
 }
