target position_hheaderchange display to flex and set align-items to center. iwthin 769 media, set h3 and p font size

--- a/src/Styles/ExpGrid.scss
+++ b/src/Styles/ExpGrid.scss
@@ -77,7 +77,8 @@
     margin: 0 2%;
 
     .position_header {
-      display: inherit;
+      display: flex;
+      align-items: center;
       justify-content: space-between;
 
       h3 p {
@@ -140,9 +141,12 @@
       }
 
       .position_header {
-        h3,
+        h3 {
+          font-size: 3.1vw;
+        }
+
         p {
-          font-size: 17px;
+          font-size: 2.8vw;
         }
       }
     }
