--- a/src/Styles/ExpGrid.scss
+++ b/src/Styles/ExpGrid.scss
@@ -136,10 +136,22 @@
 
       .work-info {
         gap: 10vw;
+
+        &.active {
+          gap: 0;
+
+          li {
+            font-size: 2vw;
+          }
+
+          h3 {
+            font-size: 2.9vw;
+          }
+        }
       }
 
       h4 {
-        font-size: 4vw;
+        font-size: 3.5vw;
       }
 
       .details_toggle {
