--- a/src/Styles/ExpGrid.scss
+++ b/src/Styles/ExpGrid.scss
@@ -31,8 +31,9 @@
     border-radius: 25px;
     width: 90%;
     position: relative;
-    height: 100%;
+    height: 90%;
     font-size: 2.3vh;
+    align-self: center;
 
     &:hover {
       background-color: rgba(101, 98, 98, 0.906) !important;
@@ -118,12 +119,23 @@
   }
 }
 
+@media (min-width: 1026px) {
+  .experience_grid {
+    .experience_grid_card {
+      img {
+        height: 300px;
+        width: 300px;
+      }
+    }
+  }
+}
+
 @media (max-width: 1025px) {
   .experience_grid {
     .experience_grid_card {
       img {
-        height: 35vw;
-        width: 35vw;
+        height: 30vw;
+        width: 30vw;
       }
     }
   }
@@ -141,7 +153,7 @@
           gap: 0;
 
           li {
-            font-size: 2vw;
+            font-size: 2.3vw;
           }
 
           h3 {
@@ -168,12 +180,6 @@
         p {
           font-size: 2.5vw;
         }
-      }
-    }
-    .experience_grid_card {
-      img {
-        height: 30vw;
-        width: 30vw;
       }
     }
   }
