--- a/src/Styles/ExpGrid.scss
+++ b/src/Styles/ExpGrid.scss
@@ -145,9 +145,10 @@
   .experience_grid {
     .MuiPaper-root {
       width: 73vw;
+      margin-left: 9vw;
 
       .work-info {
-        gap: 10vw;
+        gap: 3vw;
 
         &.active {
           gap: 0;
@@ -174,7 +175,7 @@
 
       .position_header {
         h3 {
-          font-size: 2.9vw;
+          font-size: 2.7vw;
         }
 
         p {
