--- a/src/Styles/ExpGrid.scss
+++ b/src/Styles/ExpGrid.scss
@@ -164,7 +164,7 @@
       }
 
       h4 {
-        font-size: 3.5vw;
+        font-size: 100%;
       }
 
       .details_toggle {
@@ -175,7 +175,7 @@
 
       .position_header {
         h3 {
-          font-size: 2.7vw;
+          font-size: 100%;
         }
 
         p {
